--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,4 @@
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
-android.enableR8=true
-org.gradle.jvmargs=-Xmx4608m
+kotlin.jvm.target.validation.mode = IGNORE
