--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: mamabhanja_driver
 description: A new Flutter application.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 1.1.0+1100
+version: 1.1.0+1101
 
 environment:
   sdk: ">=3.0.5 <4.0.0"
@@ -74,7 +74,10 @@ dependencies:
   #payment dependency
   flutter_stripe: ^12.0.2
   razorpay_flutter: ^1.3.7
-  flutter_paypal_native: ^2.1.0
+  flutter_paypal_native: ### Replace this. This is permanently discontinued.
+    git:
+      url: https://github.com/10urbulut/flutter_paypal_native.git
+      ref: main 
 
 # dependency_overrides:
 #   webview_flutter: ^4.9.0
